exports[`Home component snapshot render with confirm message 1`] = `
<article>
  <p>
    You have to confirm your email. Please open email to follow link or 
    <a
      href={true}
      onClick={[Function]}>
      resend
    </a>
     email again.
  </p>
  <p>
    Home Page
  </p>
</article>
`;

exports[`Home component snapshot render without confirm message 1`] = `
<article>
  <p>
    Home Page
  </p>
</article>
`;
